Add: Nav layout

--- a/public/index.html
+++ b/public/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <title>KNEETAG</title>
+    <link rel="icon" href="Image/favicon.png" />
+    <title>| KNEETAG</title>
   </head>
   <body>
     <div id="root"></div>
