--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="Image/favicon.png" />
+    <link rel="icon" href="/Image/favicon.png" />
     <title>| KNEETAG</title>
   </head>
   <body>
